test/typeCheckTest/fail/test27.ic
class BadDiv {
	void main (string [] args) {
		string s = 2 / null;
	}
}